<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/background" tools:context=".LoginActivity">
    <TextView android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="80dp" android:layout_marginEnd="80dp" android:text="@string/Login_text" android:textSize="24sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/userNameTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="73dp" android:layout_marginEnd="80dp" android:text="@string/UserNameTextView" android:textAlignment="viewStart" android:textSize="16sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView android:id="@+id/passwordTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="10dp" android:layout_marginEnd="80dp" android:text="@string/PasswordText" android:textAlignment="viewStart" android:textSize="16sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/userNameTextField"/>
    <EditText android:id="@+id/userNameTextField" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="5dp" android:layout_marginEnd="80dp" android:ems="10" android:minHeight="48dp" android:hint="@string/UsernameTextField" android:importantForAutofill="no" android:inputType="textPersonName" android:textSize="14sp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/userNameTextView"/>
    <EditText android:id="@+id/passwordTextField" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="5dp" android:layout_marginEnd="80dp" android:ems="10" android:hint="@string/PasswordTextFiels" android:importantForAutofill="no" android:inputType="textPassword" android:textSize="14sp" android:minHeight="48dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/passwordTextView"/>
    <Button android:id="@+id/submitButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginTop="48dp" android:layout_marginEnd="16dp" android:text="@string/Login_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/passwordTextField"/>
    <Button android:id="@+id/SignUpButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:text="@string/signupText" android:textSize="30sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/submitButton" android:layout_marginBottom="20dp"/>
    <Button android:id="@+id/fingerprintButton" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_marginTop="8dp" android:layout_marginBottom="142dp" android:text="@string/fingerprintText" android:textSize="20sp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/SignUpButton" app:layout_constraintVertical_bias="1.0"/>
</androidx.constraintlayout.widget.ConstraintLayout>