<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/background" tools:context=".RegisterActivity">
    <TextView android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="24dp" android:layout_marginEnd="80dp" android:text="@string/Register_text" android:textSize="24sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.465" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <TextView android:id="@+id/userNameTextV" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="73dp" android:layout_marginEnd="80dp" android:text="@string/UsernameHere" android:textAlignment="viewStart" android:textSize="16sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView android:id="@+id/passwordTextV" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="5dp" android:layout_marginEnd="80dp" android:text="@string/PasswordHere" android:textAlignment="viewStart" android:textSize="16sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/usernameEdit"/>
    <EditText android:id="@+id/usernameEdit" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="5dp" android:layout_marginEnd="80dp" android:ems="10" android:minHeight="48dp" android:hint="@string/username_hint" android:inputType="text" android:importantForAutofill="yes" android:autofillHints="username" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/userNameTextV"/>
    <EditText android:id="@+id/passwordEdit" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="80dp" android:layout_marginTop="5dp" android:layout_marginEnd="80dp" android:ems="10" android:minHeight="48dp" android:hint="@string/password_hint" android:inputType="textPassword" android:importantForAutofill="yes" android:autofillHints="password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/passwordTextV"/>
    <Button android:id="@+id/registerButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/register_button_text" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/passwordEdit"/>
</androidx.constraintlayout.widget.ConstraintLayout>